--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_sms_inbox: ^1.0.3
+  permission_handler: ^11.4.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  workmanager: ^0.5.1
   
  
 
-  
+  shared_preferences: ^2.2.2
   local_auth: ^2.1.7
   firebase_core: ^3.11.0
   cloud_firestore: ^5.6.3
